- Fixed typo in config.yml (credit: SecretAgent002)
- Fixed bug causing Worldgaurd not to enable correctly (#273)
- Fixed bug causing scoreboard teams to not be deleted properly (#289 #274)

4.3.1: 
Bug Fixes:
- Removed unwanted debug output
TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

4.3.2:

Improvements:
- Added placeholder %betterteams_title% (#300)
- Added pie chart to bstats to check storage type (#297)

Bug Fixes: 
- Fixed bug with players leaving the game (#303)

4.3.3:

Bug Fixes: 
- Fixed bug with SQL (#309)
- Fixed bug with ally requests not being removed (#312)

4.3.4:
	
Bug Fixes: 
- Fixed bug causing offline players to cause the server to lag (#321)
- Fixed bug when there are no teams made (#318)

4.3.5: 

Bug Fixes: 
- Fixed bug where some messages would display with "true" before them

4.3.6: 

Bug Fixes: 
- Fixed internal error when viewing ally requests from teams that were disbanded (#326)
- Fixed bug with /teama reload (#328) 
- Fixed 404 links within the wiki (#324)

4.3.7: 

Features: 
- Added Spanish translations (es) - Credit Santos (discord)

Improvements:
- Added some missing Mexican Spanish translations - Credit Mayansito (discord)

Bug Fixes:
- Fixed /team disband bug - Credit Shorxy (discord) (#330)

4.4.0: 

Features: 
- Added Lithuanian translations (#335) - Credit Fragas (discord)

Bug Fixes: 
- Performance improvements on when closing inventory (#345) - Credit PhoenixZTT (discord)
- Fixed bug with invite message on polish translations (you will need to reset your pl.yml file for this to take effect) (#341)

4.4.1: 

Features:
- Added 4 new placeholders for online and offline member lists (#346)

Improvements: 
- /team warp <team> now shows all warps created by that team (#351)

Bug Fixes:
- Fixed bug where `enforceTag` does not work as expected (#350) (#348)
- Fixed bugs causing errors on empty YAML files

Headings: 
Features: 


Improvements:


Bug Fixes: 
