@@ -91,9 +91,11 @@ info.money: '&6Balance: &b%s'
 info.ally: '&6Allies: &b%s'
 kick.success: '&6That player has been kicked'
 kick.notify: '&6You have been kicked from team %s'
+kick.title: '&4You have been kicked from your team'
 kick.noPerm: '&6You do not have permission to kick that person'
 ban.success: '&6That player has been banned'
 ban.notify: '&6You have been banned from team %s'
+ban.title: '&4You have been banned from your team'
 ban.noPerm: '&6You do not have permission to ban that person'
 ban.already: '&6That player is already banned'
 unban.success: '&6That player has been unbanned'
